temporary fix for highlight overlay: make it invisible until we'll understand how its coordinates can be shifted down in sync with webview convent subview

--- a/ProtonMail/ProtonMail/Resource/editor.css
+++ b/ProtonMail/ProtonMail/Resource/editor.css
@@ -1,3 +1,7 @@
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary {
     display: block;
 }
